[project]
name = "teleexport-backend"
version = "1.0.0"
description = "TeleExport Python backend for Telegram chat export"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.30",
    "jinja2>=3.1",
    "pillow>=11",
    "orjson>=3.10",
    "aiofiles>=24",
    "tqdm>=4.66",
    "emoji>=2.14",
    "python-dateutil>=2.9",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "export*", "formatters*", "ipc*", "utils*"]
